ajout du plateau d'échec en couleur

--- a/src/main/resources/fr/chess/saechess/hello-view.fxml
+++ b/src/main/resources/fr/chess/saechess/hello-view.fxml
@@ -28,77 +28,77 @@
     <GridPane fx:id="chessBoard">
       <children>
         <!-- Création des cases de l'échiquier -->
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="0" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="1" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="2" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="3" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="4" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="5" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="6" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="7" width="60" height="60" fill="black"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="0" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="1" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="2" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="3" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="4" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="5" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="6" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="0" GridPane.columnIndex="7" width="60" height="60" fill="#739552"/>
 
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="0" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="1" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="2" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="3" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="4" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="5" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="6" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="7" width="60" height="60" fill="white"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="0" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="1" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="2" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="3" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="4" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="5" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="6" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="1" GridPane.columnIndex="7" width="60" height="60" fill="#EBECD0"/>
 
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="0" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="1" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="2" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="3" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="4" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="5" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="6" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="7" width="60" height="60" fill="black"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="0" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="1" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="2" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="3" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="4" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="5" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="6" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="2" GridPane.columnIndex="7" width="60" height="60" fill="#739552"/>
 
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="0" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="1" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="2" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="3" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="4" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="5" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="6" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="7" width="60" height="60" fill="white"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="0" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="1" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="2" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="3" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="4" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="5" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="6" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="3" GridPane.columnIndex="7" width="60" height="60" fill="#EBECD0"/>
 
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="0" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="1" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="2" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="3" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="4" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="5" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="6" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="7" width="60" height="60" fill="black"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="0" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="1" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="2" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="3" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="4" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="5" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="6" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="4" GridPane.columnIndex="7" width="60" height="60" fill="#739552"/>
 
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="0" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="1" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="2" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="3" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="4" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="5" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="6" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="7" width="60" height="60" fill="white"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="0" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="1" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="2" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="3" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="4" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="5" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="6" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="5" GridPane.columnIndex="7" width="60" height="60" fill="#EBECD0"/>
 
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="0" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="1" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="2" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="3" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="4" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="5" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="6" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="7" width="60" height="60" fill="black"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="0" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="1" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="2" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="3" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="4" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="5" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="6" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="6" GridPane.columnIndex="7" width="60" height="60" fill="#739552"/>
 
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="0" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="1" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="2" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="3" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="4" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="5" width="60" height="60" fill="white"/>
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="6" width="60" height="60" fill="black"/>
-        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="7" width="60" height="60" fill="white"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="0" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="1" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="2" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="3" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="4" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="5" width="60" height="60" fill="#EBECD0"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="6" width="60" height="60" fill="#739552"/>
+        <Rectangle GridPane.rowIndex="7" GridPane.columnIndex="7" width="60" height="60" fill="#EBECD0"/>
 
       </children>
     </GridPane>
