--- a/src/main/resources/fr/chess/saechess/hello-view.fxml
+++ b/src/main/resources/fr/chess/saechess/hello-view.fxml
@@ -5,9 +5,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.collections.FXCollections?>
 
 <?import javafx.scene.layout.GridPane?>
-<HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+
+<?import java.lang.String?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" style="--body-background-color: black;"
       fx:controller="fr.chess.saechess.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
@@ -18,23 +24,31 @@
 
     <!-- Création de nom et Timer 1 -->
     <HBox>
-
     </HBox>
 
     <!-- Création de l'échiquier 8x8 -->
     <GridPane>
 
+
     </GridPane>
 
     <!-- Création de nom et Timer 2 -->
-    <HBox>
+    <HBox style="-fx-background-color: black; -fx-padding:10; -fx-spacing: 1;">
 
     </HBox>
 
   </VBox>
 
   <!-- Création partie droite de page accueil -->
-  <VBox>
+  <VBox style="-fx-background-color: blue; -; -fx-spacing: 1;">
+    <Label style="-fx-font-size: 18;" text="Bienvenue sur chess.com" />
+    <Label text="choisiser votre mode de jeux:" />
+    <SplitMenuButton text="choissie un mod de jeux ">
+      <items>
+        <MenuItem text="player vs player"></MenuItem>
+        <MenuItem text="player vs bot"></MenuItem>
+      </items>
+    </SplitMenuButton>
 
   </VBox>
 
