--- a/src/main/resources/fr/chess/saechess/home.fxml
+++ b/src/main/resources/fr/chess/saechess/home.fxml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.layout.GridPane?>
-
-<?import java.lang.String?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.SplitMenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" style="--body-background-color: black;"
-      fx:controller="fr.chess.saechess.HelloController">
+<HBox alignment="CENTER" spacing="20.0" style="--body-background-color: black;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="fr.chess.saechess.HelloController">
   <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
   </padding>
 
   <!-- Création partie gauche de page accueil -->
@@ -41,12 +31,17 @@
 
   <!-- Création partie droite de page accueil -->
   <VBox style="-fx-background-color: black;-fx-spacing: 1;">
-    <Label text="Bienvenue sur chess.com" textFill="WHITE" ></Label>
-
+    <Label text="Bienvenue sur chess.com" textFill="WHITE"/>
+   
+   
+   
     <SplitMenuButton text="choissie un mod de jeux ">
+      <padding>
+        <Insets top="200.0" />
+      </padding>
       <items>
-        <MenuItem text="player vs player"></MenuItem>
-        <MenuItem text="player vs bot"></MenuItem>
+        <MenuItem text="player vs player" />
+        <MenuItem text="player vs bot" />
       </items>
     </SplitMenuButton>
 
